[package]
name = "material"
description = "A material design color palette for the terminal"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/azorng/material"
readme = "README.md"
keywords = ["cli", "color", "terminal", "palette", "material-design"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.25.0"
crossterm = "0.27.0"
colors-transform = "0.2.11"
clipboard = "0.5.0"
